--- a/index.html
+++ b/index.html
@@ -12,7 +12,75 @@ window.open("z4_tom.html","okienko_z4","toolbar=no,directories=no,menubar=no,hei
 }
 function WinOpen_z5()
 {
-window.open("zadanie5_tom.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=250,width=800,top=10,left=300");
+window.open("zadanie5_tom.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=250,width=800,top=10,left=300");
+}
+function WinOpen_z6()
+{
+window.open("zadanie6_tom.html","okienko_z6","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z7()
+{
+window.open("zadanie7_tom.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z8()
+{
+window.open("zadanie8_tom.html","okienko_z8","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z9()
+{
+window.open("zadanie9_tom.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z10()
+{
+window.open("zadanie10_tom.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z11()
+{
+window.open("zadanie11_tom.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z11_kod()
+{
+window.open("zadanie11_tom_KOD.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z12()
+{
+window.open("zadanie12_tom.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z12_kod()
+{
+window.open("zadanie12_tom_KOD.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z13()
+{
+window.open("zadanie13_tom.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z13_kod()
+{
+window.open("zadanie13_tom KOD.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z14()
+{
+window.open("zadanie14_tom.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z14_kod()
+{
+window.open("zadanie14_tom KOD.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z15()
+{
+window.open("zadanie15_tom.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z15_kod()
+{
+window.open("zadanie15_tom KOD.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z16()
+{
+window.open("zadanie16_tom.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z16_kod()
+{
+window.open("zadanie16_tom KOD.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
 }
 function okno_zamknij()
 {
@@ -26,6 +94,23 @@ window.close()
 <input type="button_z3" name="zadanie3" value="zadanie3-tomys" onclick="WinOpen_z3(' ')">
 <input type="button_z4" name="zadanie4" value="zadanie4-tomys" onclick="WinOpen_z4(' ')">
 <input type="button_z5" name="zadanie5" value="zadanie5-tomys" onclick="WinOpen_z5(' ')">
+<input type="button_z6" name="zadanie6" value="zadanie6-tomys" onclick="WinOpen_z6(' ')">
+<input type="button_z7" name="zadanie7" value="zadanie7-tomys" onclick="WinOpen_z7(' ')">
+<input type="button_z8" name="zadanie8" value="zadanie8-tomys" onclick="WinOpen_z8(' ')">
+<input type="button_z9" name="zadanie9" value="zadanie9-tomys" onclick="WinOpen_z9(' ')">
+<input type="button_z10" name="zadanie10" value="zadanie10-tomys" onclick="WinOpen_z10(' ')">
+<input type="button_z11" name="zadanie11" value="zadanie11-tomys" onclick="WinOpen_z11(' ')">
+<input type="button_z11-kod" name="zadanie11_kod" value="zadanie11_kod-tomys" onclick="WinOpen_z11_kod(' ')">
+<input type="button_z12" name="zadanie12" value="zadanie12-tomys" onclick="WinOpen_z12(' ')">
+<input type="button_z12-kod" name="zadanie12_kod" value="zadanie12_kod-tomys" onclick="WinOpen_z12_kod(' ')">
+<input type="button_z13" name="zadanie13" value="zadanie13-tomys" onclick="WinOpen_z13(' ')">
+<input type="button_z13-kod" name="zadanie13_kod" value="zadanie13_kod-tomys" onclick="WinOpen_z13_kod(' ')">
+<input type="button_z14" name="zadanie14" value="zadanie14-tomys" onclick="WinOpen_z14(' ')">
+<input type="button_z14-kod" name="zadanie14_kod" value="zadanie14_kod-tomys" onclick="WinOpen_z14_kod(' ')">
+<input type="button_z15" name="zadanie15" value="zadanie15-tomys" onclick="WinOpen_z15(' ')">
+<input type="button_z15-kod" name="zadanie15_kod" value="zadanie15_kod-tomys" onclick="WinOpen_z15_kod(' ')">
+<input type="button_z16" name="zadanie16" value="zadanie16-tomys" onclick="WinOpen_z16(' ')">
+<input type="button_z16-kod" name="zadanie16_kod" value="zadanie16_kod-tomys" onclick="WinOpen_z16_kod(' ')">
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </form>
 </body>
