--- a/zadanie15_tom.html
+++ b/zadanie15_tom.html
@@ -7,7 +7,7 @@
     <title>Zadanie 15</title>
 </head>
 <body>
-    <div style="color:green;font-size:40px;"></div>
+    <div style="color:green;font-size:40px;">
     <script language="JavaScript">
         var m=prompt("m_tom=","");
         var m_tom=parseFloat(m);
@@ -15,6 +15,6 @@
         m2=m_tom * 2;
         document.write("1/"+m_tom+"=1/"+m2+"+1/"+m2+"");
         </script>
-
+</div>
 </body>
 </html>
