--- a/zadanie14_tom KOD.html
+++ b/zadanie14_tom KOD.html
@@ -17,7 +17,7 @@
     <title>Zadanie 14</title>
 </head>
 <body>
-    <div style="color:green;font-size:40px;"></div>
+    <div style="color:green;font-size:40px;">
     <script language="JavaScript">
         var m=prompt("m_tom=","");
         var m_tom=parseFloat(m);
@@ -31,7 +31,7 @@
         m_c=(m_tom * m_j);
         document.write("1/"+m_tom+"=1/"+m_d+"+1/"+m_t+"+1/"+m_c+"");
         </script>
-
+</div>
 </body>
 </html>
     </textarea>
