--- a/index.html
+++ b/index.html
@@ -82,6 +82,82 @@ function WinOpen_z16_kod()
 {
 window.open("zadanie16_tom KOD.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
 }
+function WinOpen_z17()
+{
+window.open("zadanie17_tom.html","okienko_z17","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z17_kod()
+{
+window.open("zadanie17_tom KOD.html","okienko_z17","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z18()
+{
+window.open("zadanie18_tom.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z18_kod()
+{
+window.open("zadanie18_tom KOD.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z19()
+{
+window.open("zadanie19_tom.html","okienko_z19","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z19_kod()
+{
+window.open("zadanie19_tom KOD.html","okienko_z19","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z20()
+{
+window.open("zadanie20_tom.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z20_kod()
+{
+window.open("zadanie20_tom KOD.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z21()
+{
+window.open("zadanie21_tom.html","okienko_z21","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z22()
+{
+window.open("zadanie22_tom.html","okienko_z22","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z22_kod()
+{
+window.open("zadanie22_tom KOD.html","okienko_z22","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z23()
+{
+window.open("zadanie23_tom.html","okienko_z23","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z23_kod()
+{
+window.open("zadanie23_tom KOD.html","okienko_z23","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z24()
+{
+window.open("zadanie24_tom.html","okienko_z24","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z24_kod()
+{
+window.open("zadanie24_tom KOD.html","okienko_z24","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z25()
+{
+window.open("zadanie25_tom.html","okienko_z25","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z25_kod()
+{
+window.open("zadanie25_tom KOD.html","okienko_z25","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z26()
+{
+window.open("zadanie26_tom.html","okienko_z26","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z26_kod()
+{
+window.open("zadanie26_tom KOD.html","okienko_z26","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
 function okno_zamknij()
 {
 window.close()
@@ -111,6 +187,25 @@ window.close()
 <input type="button_z15-kod" name="zadanie15_kod" value="zadanie15_kod-tomys" onclick="WinOpen_z15_kod(' ')">
 <input type="button_z16" name="zadanie16" value="zadanie16-tomys" onclick="WinOpen_z16(' ')">
 <input type="button_z16-kod" name="zadanie16_kod" value="zadanie16_kod-tomys" onclick="WinOpen_z16_kod(' ')">
+<input type="button_z17" name="zadanie17" value="zadanie17-tomys" onclick="WinOpen_z17(' ')">
+<input type="button_z17-kod" name="zadanie17_kod" value="zadanie17_kod-tomys" onclick="WinOpen_z17_kod(' ')">
+<input type="button_z18" name="zadanie18" value="zadanie18-tomys" onclick="WinOpen_z18(' ')">
+<input type="button_z18-kod" name="zadanie18_kod" value="zadanie18_kod-tomys" onclick="WinOpen_z18_kod(' ')">
+<input type="button_z19" name="zadanie19" value="zadanie19-tomys" onclick="WinOpen_z19(' ')">
+<input type="button_z19-kod" name="zadanie19_kod" value="zadanie19_kod-tomys" onclick="WinOpen_z19_kod(' ')">
+<input type="button_z20" name="zadanie20" value="zadanie20-tomys" onclick="WinOpen_z20(' ')">
+<input type="button_z20-kod" name="zadanie20_kod" value="zadanie20_kod-tomys" onclick="WinOpen_z20_kod(' ')">
+<input type="button_z21" name="zadanie21" value="zadanie21-tomys" onclick="WinOpen_z21(' ')">
+<input type="button_z22" name="zadanie22" value="zadanie22-tomys" onclick="WinOpen_z22(' ')">
+<input type="button_z22-kod" name="zadanie22_kod" value="zadanie22_kod-tomys" onclick="WinOpen_z22_kod(' ')">
+<input type="button_z23" name="zadanie23" value="zadanie23-tomys" onclick="WinOpen_z23(' ')">
+<input type="button_z23-kod" name="zadanie23_kod" value="zadanie23_kod-tomys" onclick="WinOpen_z23_kod(' ')">
+<input type="button_z24" name="zadanie24" value="zadanie24-tomys" onclick="WinOpen_z24(' ')">
+<input type="button_z24-kod" name="zadanie24_kod" value="zadanie24_kod-tomys" onclick="WinOpen_z24_kod(' ')">
+<input type="button_z25" name="zadanie25" value="zadanie25-tomys" onclick="WinOpen_z25(' ')">
+<input type="button_z25-kod" name="zadanie25_kod" value="zadanie25_kod-tomys" onclick="WinOpen_z25_kod(' ')">
+<input type="button_z26" name="zadanie26" value="zadanie26-tomys" onclick="WinOpen_z26(' ')">
+<input type="button_z26-kod" name="zadanie26_kod" value="zadanie26_kod-tomys" onclick="WinOpen_z26_kod(' ')">
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </form>
 </body>
