--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@ function WinOpen_z26_kod()
 {
 window.open("zadanie26_tom KOD.html","okienko_z26","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
 }
+function WinOpen_z27()
+{
+window.open("zadanie27_tom.html","okienko_z27","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z27_kod()
+{
+window.open("zadanie27_tom KOD.html","okienko_z27","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
 function okno_zamknij()
 {
 window.close()
@@ -206,6 +214,8 @@ window.close()
 <input type="button_z25-kod" name="zadanie25_kod" value="zadanie25_kod-tomys" onclick="WinOpen_z25_kod(' ')">
 <input type="button_z26" name="zadanie26" value="zadanie26-tomys" onclick="WinOpen_z26(' ')">
 <input type="button_z26-kod" name="zadanie26_kod" value="zadanie26_kod-tomys" onclick="WinOpen_z26_kod(' ')">
+<input type="button_z27" name="zadanie27" value="zadanie27-tomys" onclick="WinOpen_z27(' ')">
+<input type="button_z27-kod" name="zadanie27_kod" value="zadanie27_kod-tomys" onclick="WinOpen_z27_kod(' ')">
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </form>
 </body>
