--- a/index.html
+++ b/index.html
@@ -166,6 +166,38 @@ function WinOpen_z27_kod()
 {
 window.open("zadanie27_tom KOD.html","okienko_z27","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
 }
+function WinOpen_z28()
+{
+window.open("zadanie28_tom.html","okienko_z28","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z29()
+{
+window.open("zadanie29_tom.html","okienko_z29","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z30()
+{
+window.open("zadanie30_tom.html","okienko_z30","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z30_kod()
+{
+window.open("zadanie30_tom_KOD.html","okienko_z30","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z31()
+{
+window.open("zadanie31_tom.html","okienko_z31","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z31_kod()
+{
+window.open("zadanie31_tom_KOD.html","okienko_z31","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z32()
+{
+window.open("zadanie32_tom.html","okienko_z32","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+function WinOpen_z32_kod()
+{
+window.open("zadanie32_tom_KOD.html","okienko_z32","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
 function okno_zamknij()
 {
 window.close()
@@ -216,6 +248,14 @@ window.close()
 <input type="button_z26-kod" name="zadanie26_kod" value="zadanie26_kod-tomys" onclick="WinOpen_z26_kod(' ')">
 <input type="button_z27" name="zadanie27" value="zadanie27-tomys" onclick="WinOpen_z27(' ')">
 <input type="button_z27-kod" name="zadanie27_kod" value="zadanie27_kod-tomys" onclick="WinOpen_z27_kod(' ')">
+<input type="button_z28" name="zadanie28" value="zadanie28-tomys" onclick="WinOpen_z28(' ')">
+<input type="button_z29" name="zadanie29" value="zadanie29-tomys" onclick="WinOpen_z29(' ')">
+<input type="button_z30" name="zadanie30" value="zadanie30-tomys" onclick="WinOpen_z30(' ')">
+<input type="button_z30-kod" name="zadanie30_kod" value="zadanie30_kod-tomys" onclick="WinOpen_z30_kod(' ')">
+<input type="button_z31" name="zadanie31" value="zadanie31-tomys" onclick="WinOpen_z31(' ')">
+<input type="button_z31-kod" name="zadanie31_kod" value="zadanie31_kod-tomys" onclick="WinOpen_z31_kod(' ')">
+<input type="button_z32" name="zadanie32" value="zadanie32-tomys" onclick="WinOpen_z32(' ')">
+<input type="button_z32-kod" name="zadanie32_kod" value="zadanie32_kod-tomys" onclick="WinOpen_z32_kod(' ')">
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </form>
 </body>
