--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@ window.open("zadanie32_tom.html","okienko_z32","toolbar=no,directories=no,menuba
 }
 function WinOpen_z32_kod()
 {
+window.open("test_zad_tom.html","okienko","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+}
+  function WinOpen_ztest()
+{
 window.open("zadanie32_tom_KOD.html","okienko_z32","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
 }
 function okno_zamknij()
@@ -256,6 +260,7 @@ window.close()
 <input type="button_z31-kod" name="zadanie31_kod" value="zadanie31_kod-tomys" onclick="WinOpen_z31_kod(' ')">
 <input type="button_z32" name="zadanie32" value="zadanie32-tomys" onclick="WinOpen_z32(' ')">
 <input type="button_z32-kod" name="zadanie32_kod" value="zadanie32_kod-tomys" onclick="WinOpen_z32_kod(' ')">
+<input type="button_zad_test" name="zadanie_test" value="zadanie_testowe-tomys" onclick="WinOpen_ztest(' ')">
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </form>
 </body>
