--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ window.open("test_zad_tom.html","okienko","toolbar=no,directories=no,menubar=no,
 }
   function WinOpen_ztest()
 {
-window.open("zadanie32_tom_KOD.html","okienko_z32","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
+window.open("test_zad_tom.html","okienko","toolbar=no,directories=no,menubar=no,height=5000,width=3000,top=10,left=400");
 }
 function okno_zamknij()
 {
